--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -4,7 +4,44 @@ hr {
     background-color:black;
   }
 
-h1 {
-
-    
+h2 {
+    font-size: 18px;
+    font-family: 'verdana';
+    font-weight: lighter;
 }
+
+h3 {
+    font-size: 20px;
+    font-family: 'verdana';
+    font-weight: lighter;
+}
+
+h4 {
+    font-size: 18px;
+    font-family: 'verdana';
+    font-weight: lighter;
+}
+
+h5 {
+    font-size: 10px;
+    font-family: 'verdana';
+    font-weight: lighter;
+}
+
+
+a:hover {
+    background-color: yellow;
+    font-style: 'bold'
+  }
+  a:link, a:visited {
+    color: black;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+  
+  a:hover, a:active {
+    background-color: yellow;
+    font-weight: bold;
+  }
