--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -34,13 +34,7 @@ p {
     font-weight: lighter;
 }
 
-
-a:hover {
-    background-color: yellow;
-    font-style: 'bold'
-  }
-
-  a:link, a:visited { /* W3 Schools */
+a:link, a:visited { /* W3 Schools */
     color: black;
     padding: 5px 5px;
     text-align: center;
@@ -48,7 +42,7 @@ a:hover {
     display: inline-block;
   }
   
- a:hover, a:active { /* W3 Schools */
+a:hover, a:active { /* W3 Schools */
     background-color: yellow;
     font-weight: bold;
   }
@@ -67,4 +61,10 @@ img {
     text-decoration: none;
     display: inline-block;
     font-size: 24px;
+}
+
+#logo:hover, #logo:active  {
+  background-color: white;
+  border: 2px solid white;
+  font-weight: regular;
 }
