--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -47,7 +47,7 @@ a:hover, a:active { /* W3 Schools */
     font-weight: bold;
   }
 
-img {
+.prod {
     border: 2px solid black;
   }
 
@@ -65,6 +65,5 @@ img {
 
 #logo:hover, #logo:active  {
   background-color: white;
-  border: 2px solid white;
   font-weight: regular;
 }
