--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -1,3 +1,4 @@
+
 hr {
     height:5px;
     border-width:0;
@@ -37,7 +38,7 @@ p {
 a:link, a:visited { /* W3 Schools */
     color: black;
     padding: 5px 5px;
-    text-align: center;
+    text-align: left;
     display: inline-block;
     text-decoration: none;
   }
