--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -12,7 +12,9 @@ h2 {
     font-size: 24px;
     font-family: 'verdana';
     font-weight: lighter;
-    text-align:right;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 
 h3 {
@@ -89,4 +91,5 @@ div {
 .container {
   flex-flow: row nowrap;
   display: flex;
+  justify-content: flex-end;
   }
