--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -108,7 +108,7 @@ div {
   display:flex;
   flex-direction: column;
   width: 100%;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   align-items: flex-end;
 }
 
@@ -117,7 +117,6 @@ div {
   flex-direction: column;
   width: 90%;
   justify-content: flex-end;
-  
 }
 
 .details {
