--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -124,12 +124,14 @@ div {
   flex-direction: column;
   justify-content: space-around;
   width: 100%;
+  padding: 10px;
+  border: 30px;
 }
 .photo {
   display:flex;
   width: 100%;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: top;
 }
 
 .end {
