--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -3,6 +3,7 @@ hr {
     height:5px;
     background-color:black;
     width: 100%;
+    flex-grow: 3;
   }
 
 h2 {
@@ -138,7 +139,7 @@ div {
   display:flex;
   width: 100%;
   justify-content: space-evenly;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .label {
