--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -137,6 +137,7 @@ div {
 
 .end {
   display:flex;
+  flex-direction: column;
   width: 100%;
   justify-content: space-evenly;
   align-items: center;
@@ -157,4 +158,9 @@ div {
   align-items: flex-start;
   justify-content: flex-start;
   padding: 0 0 0 0;
+}
+
+.priceline {
+  display: flex;
+  justify-content: flex-end;
 }
