--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -56,7 +56,7 @@ a:hover, a:active { /* W3 Schools */
     border: 2px solid black;
   }
 
-.button{ /* W3 Schools */
+.button { /* W3 Schools */
     background-color: yellow; 
     border: 2px solid black;
     padding: 15px 15px;
@@ -95,6 +95,7 @@ div {
   width: 100%;
   justify-content: space-evenly;
   align-self: first baseline;
+  margin-left: 50px;
 }
 
 .item1 {
@@ -155,6 +156,7 @@ div {
 
 .pagetitle {
   align-self: first baseline;
+  margin-left: 25px;
 }
 
 .header {
@@ -163,6 +165,7 @@ div {
   align-items: flex-start;
   justify-content: flex-start;
   padding: 0 0 0 0;
+  margin: 0 0 0 0;
 }
 
 .priceline {
