--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -187,3 +187,13 @@ div {
   width: 100%;
 }
 
+select {
+  width: 100%;
+  font-size: 18px;
+  padding: 10 60 60 10;
+  background-color: #fff;
+  border: 1px solid black;
+  border-radius: 5;
+  color: #000;
+  position: relative;
+}
