--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -190,10 +190,10 @@ div {
 select {
   width: 100%;
   font-size: 18px;
-  padding: 10 60 60 10;
+  padding: 3px 6px 6px 3px;
   background-color: #fff;
   border: 1px solid black;
-  border-radius: 5;
+  border-radius: 0;
   color: #000;
   position: relative;
 }
