fix so index images are not updated

--- a/solution-hw5/style.css
+++ b/solution-hw5/style.css
@@ -54,6 +54,9 @@ a:hover, a:active { /* W3 Schools */
 
 .prod {
     border: 2px solid black;
+  }
+
+.products {
     width: 200px;
     height: 200px;
     border: 2px solid black;
