--- a/solution-hw6/style.css
+++ b/solution-hw6/style.css
@@ -217,3 +217,64 @@ select {
   justify-content: space-around;
   margin-left: 280px;
 }
+
+/* Add these CSS rules to your style.css file */
+
+.cart-item {
+  display: flex;
+  align-items: center;
+  border: 2px solid black;
+  padding: 10px;
+  margin: 10px;
+}
+
+.cart-item-image {
+  width: 100px;
+  height: 100px;
+  border: 2px solid black;
+}
+
+.cart-item-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 10px;
+  font-size: 20px;
+  font-family: 'verdana';
+  font-weight: lighter;
+}
+
+.cart-item-description {
+  font-size: 18px;
+}
+
+.cart-item-price {
+  font-size: 20px;
+}
+
+.cart-item-remove-button {
+  font-size: 14px;
+  font-family: 'verdana';
+  font-weight: lighter;
+}
+
+.cart-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cart-total {
+  font-size: 20px;
+  font-family: 'verdana';
+  font-weight: bold;
+}
+
+.cart-end {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: last baseline;
+}
